--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "main.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -16,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/rajivnayanc/So_Called_Flappy_Bird/issues"
   },
-  "homepage": "https://github.com/rajivnayanc/So_Called_Flappy_Bird#readme",
+  "homepage": "https://rajivnayanc.github.io/So_Called_Flappy_Bird",
   "dependencies": {
     "mathjs": "^15.1.1",
     "react": "^19.2.4",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.4",
+    "gh-pages": "^6.3.0",
     "vite": "^7.3.1"
   }
 }
